--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 [pytest]
 
 DJANGO_SETTINGS_MODULE = newsapi.settings
-python_files = tests.py test_*.py *_tests.py
+python_files = tests.py test_*.py *_tests.py # Tells the pytest which file are test files
